--- a/Day#12_Decision_Trees_Assignment.ipynb
+++ b/Day#12_Decision_Trees_Assignment.ipynb
@@ -42,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -60,7 +61,217 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "df = pd.read_csv(\"instagram_users.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cc221588",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Num_posts</th>\n",
+       "      <th>Num_following</th>\n",
+       "      <th>Num_followers</th>\n",
+       "      <th>Biography_length</th>\n",
+       "      <th>Picture_availability</th>\n",
+       "      <th>Link_availability</th>\n",
+       "      <th>Average_caption_length</th>\n",
+       "      <th>Caption_zero</th>\n",
+       "      <th>Non_image_percentage</th>\n",
+       "      <th>Engagement_rate_like</th>\n",
+       "      <th>Engagement_rate_comment</th>\n",
+       "      <th>Location_tag_percentage</th>\n",
+       "      <th>Average_hashtag_count</th>\n",
+       "      <th>Promotional_keywords</th>\n",
+       "      <th>Followers_keywords</th>\n",
+       "      <th>Cosine_similarity</th>\n",
+       "      <th>Post_interval</th>\n",
+       "      <th>real_fake</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>44</td>\n",
+       "      <td>48</td>\n",
+       "      <td>325</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>0.094985</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>66</td>\n",
+       "      <td>321</td>\n",
+       "      <td>150</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>213</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.39</td>\n",
+       "      <td>1.97</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.206826</td>\n",
+       "      <td>230.412857</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>33</td>\n",
+       "      <td>970</td>\n",
+       "      <td>308</td>\n",
+       "      <td>101</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>436</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.10</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.056</td>\n",
+       "      <td>0.572174</td>\n",
+       "      <td>43.569939</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>70</td>\n",
+       "      <td>86</td>\n",
+       "      <td>360</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.859799</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>21</td>\n",
+       "      <td>285</td>\n",
+       "      <td>73</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.29</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.300494</td>\n",
+       "      <td>0.126019</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Num_posts  Num_following  Num_followers  Biography_length  \\\n",
+       "0          44             48            325                33   \n",
+       "1          10             66            321               150   \n",
+       "2          33            970            308               101   \n",
+       "3          70             86            360                14   \n",
+       "4           3             21            285                73   \n",
+       "\n",
+       "   Picture_availability  Link_availability  Average_caption_length  \\\n",
+       "0                     1                  0                      12   \n",
+       "1                     1                  0                     213   \n",
+       "2                     1                  1                     436   \n",
+       "3                     1                  0                       0   \n",
+       "4                     1                  0                      93   \n",
+       "\n",
+       "   Caption_zero  Non_image_percentage  Engagement_rate_like  \\\n",
+       "0           0.0                   0.0                  0.00   \n",
+       "1           0.0                   1.0                 14.39   \n",
+       "2           0.0                   1.0                 10.10   \n",
+       "3           1.0                   0.0                  0.78   \n",
+       "4           0.0                   0.0                 14.29   \n",
+       "\n",
+       "   Engagement_rate_comment  Location_tag_percentage  Average_hashtag_count  \\\n",
+       "0                     0.00                    0.000                    0.0   \n",
+       "1                     1.97                    0.000                    1.5   \n",
+       "2                     0.30                    0.000                    2.5   \n",
+       "3                     0.06                    0.000                    0.0   \n",
+       "4                     0.00                    0.667                    0.0   \n",
+       "\n",
+       "   Promotional_keywords  Followers_keywords  Cosine_similarity  Post_interval  \\\n",
+       "0                   0.0               0.000           0.111111       0.094985   \n",
+       "1                   0.0               0.000           0.206826     230.412857   \n",
+       "2                   0.0               0.056           0.572174      43.569939   \n",
+       "3                   0.0               0.000           1.000000       5.859799   \n",
+       "4                   0.0               0.000           0.300494       0.126019   \n",
+       "\n",
+       "  real_fake  \n",
+       "0      fake  \n",
+       "1      fake  \n",
+       "2      fake  \n",
+       "3      fake  \n",
+       "4      fake  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -73,12 +284,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "id": "d2e481d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "9e94233d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "X, y = df.iloc[:, :-1], df.iloc[:, -1]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state = 0)"
    ]
   },
   {
@@ -101,13 +323,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c01a0b7",
+   "metadata": {},
+   "source": [
+    "### Decision Tree Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0e8f4d29",
+   "execution_count": 6,
+   "id": "c9b946e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "import sklearn.metrics as mm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8843105a",
+   "metadata": {},
+   "source": [
+    "#### Training and prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0e8f4d29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Trees\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Decision Trees\")\n",
+    "DT_model = DecisionTreeClassifier().fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b8887e1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DT_pred = DT_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dae3e42",
+   "metadata": {},
+   "source": [
+    "#### Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b0a5df17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8543115077306216"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mm.accuracy_score(y_test, DT_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f0c7434b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8161, 1314],\n",
+       "       [1494, 8305]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mm.confusion_matrix(y_test, DT_pred)"
    ]
   },
   {
@@ -122,13 +441,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3bc0e996",
+   "metadata": {},
+   "source": [
+    "### Random Forest Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b37a0953",
+   "execution_count": 11,
+   "id": "0df0f309",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import sklearn.metrics as mm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfcd8262",
+   "metadata": {},
+   "source": [
+    "#### Training and prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b37a0953",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Random Forest\")\n",
+    "RF_model = RandomForestClassifier(n_estimators = 50).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "92033999",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RF_pred = RF_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95296284",
+   "metadata": {},
+   "source": [
+    "#### Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "04db2c35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8934834492061845"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mm.accuracy_score(y_test, RF_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e14ddc96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7954, 1521],\n",
+       "       [ 532, 9267]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mm.confusion_matrix(y_test, RF_pred)"
    ]
   },
   {
@@ -143,19 +559,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e4a8e78",
+   "metadata": {},
+   "source": [
+    "### Adaboost Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "f73c0c18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "import sklearn.metrics as mm"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5af3c788",
+   "metadata": {},
+   "source": [
+    "#### Training and prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4f5f3a85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaboost Classifier\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Adaboost Classifier\")\n",
+    "AB_model = AdaBoostClassifier(n_estimators = 50).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "13e70da7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AB_pred = AB_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bf1be33",
+   "metadata": {},
+   "source": [
+    "#### Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "713be62e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8641174639410605"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mm.accuracy_score(y_test, AB_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "42135c58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8136, 1339],\n",
+       "       [1280, 8519]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mm.confusion_matrix(y_test, AB_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5a39039",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
